--- a/services.html
+++ b/services.html
@@ -110,7 +110,7 @@
     <div class="service-container">
         <div class="service-card">
             <div class="service-image">
-                <img src="img-ser2.jpg" alt="Tech Consultants">
+                <img src="img2.jpg" alt="Tech Consultants">
             </div>
             <div class="service-info">
                 <h3>Tech Consultants</h3>
@@ -121,7 +121,7 @@
         </div>
         <div class="service-card">
             <div class="service-image">
-                <img src="img-ser1.jpg" alt="IT Support">
+                <img src="img1.jpg" alt="IT Support">
             </div>
             <div class="service-info">
                 <h3>IT Support</h3>
