--- a/services.html
+++ b/services.html
@@ -20,6 +20,10 @@
             background: linear-gradient(90deg, #a133ff, #3366ff);
             color: white;
         }
+        .logo {
+            font-size: 20px;
+            font-weight: bold;
+        }
         .navbar ul {
             list-style: none;
             padding: 0;
@@ -32,6 +36,7 @@
             text-decoration: none;
             color: white;
             font-weight: bold;
+            cursor: pointer;
         }
         .navbar ul li a.active {
             text-decoration: underline;
@@ -50,9 +55,10 @@
         }
         .service-container {
             display: flex;
-            flex-direction: column;
-            align-items: center;
+            flex-wrap: wrap;
+            justify-content: center;
             gap: 20px;
+            padding: 20px;
         }
         .service-card {
             display: flex;
@@ -61,13 +67,16 @@
             color: white;
             padding: 20px;
             border-radius: 10px;
-            width: 80%;
+            width: 90%;
+            max-width: 600px;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
         }
         .service-image img {
             width: 150px;
             height: 100px;
             margin-right: 20px;
             border-radius: 5px;
+            object-fit: cover;
         }
         .service-info {
             flex-grow: 1;
@@ -91,7 +100,7 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="logo"></div>
+        <div class="logo">MyLogo</div>
         <ul>
             <li><a href="#" class="active">Home</a></li>
             <li><a href="#">About us</a></li>
