--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             color: white;
             font-style: italic;
             box-shadow: 2px 2px 2px 2px;
+            border-radius: 10px 10px 10px 10px;
         }
         footer {
             position: absolute;
