Nav bar buttons hover colors improved

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
             transition: background 0.3s;
         }
         nav a:hover {
-            background: rgba(255, 255, 255, 0.2);
+            background: linear-gradient(135deg, rgb(194, 3, 194), rgb(3, 3, 204));
+            color: aliceblue;
         }
         .hero {
             padding: 50px;
