--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,10 @@
             body {
                 display: flex;
                 justify-content: space-between;
+                font-family: Arial, sans-serif;
                 margin: 0;
-                padding: 0;
+                background: linear-gradient(135deg, purple, darkblue);
+                backdrop-filter: blur(10px);
             }
 
             header {
@@ -26,15 +28,12 @@
                 border-radius: 15px;
                 box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6);
                 margin: 20px auto;
-                z-index: 10;
             }
-
             .logo {
                 font-size: 24px;
                 font-weight: bold;
                 padding-left: 15px;
             }
-
             nav ul {
                 list-style: none;
                 padding: 0;
@@ -43,7 +42,6 @@
                 gap: 20px;
                 padding-right: 15px;
             }
-
             nav a {
                 color: white;
                 text-decoration: none;
@@ -52,9 +50,9 @@
                 border-radius: 10px;
                 transition: background 0.3s;
             }
-
             nav a:hover {
-                background: rgba(255, 255, 255, 0.2);
+                background: linear-gradient(135deg, rgb(194, 3, 194), rgb(3, 3, 204));
+                color: aliceblue;
             }
 
             .main-info {
@@ -77,10 +75,15 @@
 
             label, input, textarea {
                 margin-bottom: 10px;
+                color: white;
+                font-size: 15px;
             }
 
             input, textarea, button {
                 border-radius: 5px;
+                width: 200px;
+                border-width: 3px;
+                border-color: black;
             }
 
             button:hover {
@@ -89,6 +92,39 @@
 
             .contact-details p {
                 margin: 5px 0;
+            }
+
+            .logo{
+                color: white;
+            }
+
+            h1{
+                color: rgb(255, 8, 181);
+            }
+
+            p{
+                color: white;
+                font-size: 15px;
+            }
+
+            .btn {
+                display: inline-block;
+                margin-top: 20px;
+                padding: 10px 20px;
+                background: rgba(255, 255, 255, 0.2);
+                border: none;
+                color: white;
+                cursor: pointer;
+                text-decoration: none;
+                border-radius: 5px;
+                transition: background 0.9s;
+            }
+            .btn:hover {
+                background: rgb(196, 14, 141);
+                color: white;
+                font-style: italic;
+                box-shadow: 2px 2px 2px 2px;
+                border-radius: 10px 10px 10px 10px;
             }
         </style>
     </head>
@@ -124,7 +160,7 @@
                 <label for="message">Message:</label><br>
                 <textarea id="message" name="message" rows="4" cols="50" required></textarea><br><br>
         
-                <button type="submit">Submit</button>
+                <button class="btn" type="submit">Submit</button>
             </form>
         </div>
     </body>
