--- a/contact.html
+++ b/contact.html
@@ -83,8 +83,11 @@
 
             label, input, textarea {
                 margin-bottom: 10px;
-                color: white;
                 font-size: 15px;
+            }
+
+            label{
+                color: white;
             }
 
             input, textarea, button {
