--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechSolutions Inc. | Software Development & IT Consulting</title>
-    <style>
+    <style>     
+        /* CSS code for the Home Page */
         body {
             margin: 0;
             font-family: Arial, sans-serif;
@@ -18,6 +19,7 @@
             align-items: center;
             backdrop-filter: blur(10px);
         }
+        /* CSS code that alters the Nav bar in the header */
         header {
             position: absolute;
             top: 0;
@@ -30,6 +32,7 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6);
             margin: 20px auto;
         }
+        /* CSS code for the Name of the company in the nav bar */
         .logo {
             font-size: 24px;
             font-weight: bold;
@@ -51,6 +54,7 @@
             border-radius: 10px;
             transition: background 0.3s;
         }
+        /* CSS code for the hover effect over the buttons on the nav bar */
         nav a:hover {
             background: linear-gradient(135deg, rgb(194, 3, 194), rgb(3, 3, 204));
             color: aliceblue;
@@ -73,6 +77,7 @@
             border-radius: 5px;
             transition: background 0.9s;
         }
+        /* CSS code for the hover effect over buttons on the content of the home page not the nav bar */
         .btn:hover {
             background: linear-gradient(135deg, rgb(194, 3, 194), rgb(3, 3, 204));
             color: aliceblue;
@@ -91,6 +96,7 @@
     </style>
 </head>
 <body>
+    <!-- Nav bar container -->
     <header>
         <div class="logo">TechSolutions Inc.</div>
         <nav>
