--- a/contact.html
+++ b/contact.html
@@ -62,6 +62,20 @@
                 background: linear-gradient(135deg, rgb(194, 3, 194), rgb(3, 3, 204));
                 color: aliceblue;
             }
+            nav {
+                animation: slideIn 0.5s ease-out;
+            }
+
+            @keyframes slideIn {
+                from {
+                    transform: translateX(-100%);
+                    opacity: 0;
+                }
+                to {
+                    transform: translateX(0);
+                    opacity: 1;
+                }
+            }
 
             .main-info {
                 display: flex;
