--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6);
             margin: 20px auto;
         }
+
+
         /* CSS code for the Name of the company in the nav bar */
         .logo {
             font-size: 24px;
@@ -62,7 +64,23 @@
         .hero {
             padding: 50px;
         }
+        @keyframes bounceIn {
+        0% {
+            transform: scale(0);
+            opacity: 0;
+            }
+        50% {
+            transform: scale(1.1);
+            opacity: 1;
+            }
+        100% {
+            transform: scale(1);
+            opacity: 1;
+            }
+        }
+
         .hero h1{
+            animation: bounceIn 1s ease forwards;
             font-size: 50px;
         }
         .btn {
