Added nav animations

--- a/index.html
+++ b/index.html
@@ -32,6 +32,19 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6);
             margin: 20px auto;
         }
+        header{
+            animation: slideIn 0.5s ease-out;
+        }
+        @keyframes slideIn {
+                from {
+                    transform: translateX(-100%);
+                    opacity: 0;
+                }
+                to {
+                    transform: translateX(0);
+                    opacity: 1;
+                }
+            }
 
 
         /* CSS code for the Name of the company in the nav bar */
