--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,8 @@
                 background: linear-gradient(135deg, rgb(194, 3, 194), rgb(3, 3, 204));
                 color: aliceblue;
             }
-            nav {
+
+            header {
                 animation: slideIn 0.5s ease-out;
             }
 
@@ -73,6 +74,17 @@
                 }
                 to {
                     transform: translateX(0);
+                    opacity: 1;
+                }
+            }
+
+            @keyframes popUp {
+                from {
+                    transform: scale(0);
+                    opacity: 0;
+                }
+                to {
+                    transform: scale(1);
                     opacity: 1;
                 }
             }
@@ -113,6 +125,10 @@
 
             button:hover {
                 background-color: rgb(0, 132, 255);
+            }
+
+            .main-info, .form-info{
+                animation: popUp 1s ease-out;
             }
 
             .contact-details p {
