--- a/services.html
+++ b/services.html
@@ -32,7 +32,18 @@
             border-radius: 15px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.6);
             z-index: 1000;
+            animation: slideIn 0.5s ease-out;
         }
+        @keyframes slideIn {
+                from {
+                    transform: translateX(-100%);
+                    opacity: 0;
+                }
+                to {
+                    transform: translateX(0);
+                    opacity: 1;
+                }
+            }
         .logo {
             font-size: 24px;
             font-weight: bold;
