--- a/contact.html
+++ b/contact.html
@@ -167,6 +167,10 @@
                 box-shadow: 2px 2px 2px 2px;
                 border-radius: 10px 10px 10px 10px;
             }
+
+            img{
+                width: 200px;
+            }
         </style>
 
         <script>
