--- a/index.html
+++ b/index.html
@@ -46,12 +46,25 @@
                 }
             }
 
+        @keyframes pulse {
+                0% {
+                    transform: scale(1); 
+                    }
+                50% {
+                    transform: scale(1.1); 
+                    }
+                100% {
+                    transform: scale(1); 
+                    }
+                }
+
 
         /* CSS code for the Name of the company in the nav bar */
         .logo {
             font-size: 24px;
             font-weight: bold;
             padding-left: 15px;
+            animation: pulse 1.5s infinite;
         }
         nav ul {
             list-style: none;
@@ -83,7 +96,7 @@
             opacity: 0;
             }
         50% {
-            transform: scale(1.1);
+            transform: scale(1.3);
             opacity: 1;
             }
         100% {
@@ -96,6 +109,8 @@
             animation: bounceIn 1s ease forwards;
             font-size: 50px;
         }
+
+
         .btn {
             display: inline-block;
             margin-top: 20px;
@@ -141,7 +156,7 @@
     
     <section class="hero">
         <h1>Innovative Software Solutions for <span style="color: rgb(255, 8, 181);">Modern</span> Businesses</h1>
-        <h2 style="font-style: italic;"><span style="color: rgb(255, 8, 181);">Empowering businesses</span> with custom software and <span style="color: rgb(255, 8, 181);">IT</span> consulting expertise.</h2>
+        <h2 style="font-style: italic;"><span  style="color: rgb(255, 8, 181);">Empowering businesses</span> with custom software and <span style="color: rgb(255, 8, 181);">IT</span> consulting expertise.</h2>
         <a href="contact.html" class="btn">Get in Touch</a>
     </section>
     
