Fixed images on contact page

--- a/contact.html
+++ b/contact.html
@@ -169,7 +169,7 @@
             }
 
             img{
-                width: 200px;
+                width: 40px;
             }
         </style>
 
@@ -215,6 +215,14 @@
                 <p><b>Call:</b> +27 067 007 1288</p>
                 <p><b>Email:</b> TechSolutions@gmail.com</p>
                 <p><b>Address:</b> 788 John ST Water Town</p>
+            </div>
+
+            <div>
+                <img src="instagram.png" alt="Instagram">
+                <br>
+                <img src="twitter.png" alt="X">
+                <br>
+                <img src="facebook.png" alt="Facebook">
             </div>
         </div>
 
