Changes To logo made

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 <body>
     <!-- Nav bar container -->
     <header>
-        <div class="logo">TechSolutions Inc.</div>
+        <div class="logo"><span style="color: rgb(255, 0, 242);">Tech</span>Solutions Inc.</div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
