--- a/services.html
+++ b/services.html
@@ -135,6 +135,7 @@
     <div class="service-container">
         <div class="service-card">
             <div class="service-info">
+                <img src="img1.jpg">
                 <h3>Tech Consulting</h3>
                 <p>We provide expert guidance to help businesses implement the latest technology, optimize workflows, and enhance efficiency.</p>
                 <button class="btn get-started">Get Started →</button><!-- this buttens does nothing -->
@@ -144,6 +145,7 @@
         
         <div class="service-card">
             <div class="service-info">
+                <img src="img-ser2.jpg">
                 <h3>IT Support</h3>
                 <p>Our team offers round-the-clock IT support, troubleshooting, and maintenance to keep your systems running smoothly.</p>
                 <button class="btn get-started">Get Started →</button><!-- this buttens does nothing -->
@@ -153,6 +155,7 @@
 
         <div class="service-card">
             <div class="service-info">
+                <img src="cybersecurity.png">
                 <h3>Cybersecurity</h3>
                 <p>Protect your business from cyber threats with our advanced security solutions, risk assessments, and threat mitigation strategies.</p>
                 <button class="btn get-started">Get Started →</button><!-- this buttens does nothing -->
