--- a/contact.html
+++ b/contact.html
@@ -136,6 +136,10 @@
             }
 
             .logo{
+                font-size: 24px;
+                font-weight: bold;
+                padding-left: 15px;
+                animation: pulse 1.5s infinite;
                 color: white;
             }
 
@@ -171,6 +175,19 @@
             img{
                 width: 40px;
             }
+
+            @keyframes pulse {
+                0% {
+                    transform: scale(1); 
+                    }
+                50% {
+                    transform: scale(1.1); 
+                    }
+                100% {
+                    transform: scale(1); 
+                    }
+            }
+
         </style>
 
         <script>
