--- a/services.html
+++ b/services.html
@@ -114,6 +114,12 @@
         .btn:hover {
             transform: scale(1.05); /* Make the button slightly bigger on hover */
         }
+        .service-card img {
+            max-width: 100%; /* Make the image responsive */
+            height: auto;    /* Maintain aspect ratio */
+            border-radius: 10px; /* Match the card's border radius */
+            margin-bottom: 10px; /* Add some spacing below the image */
+        }
     </style>
 </head>
 <body>
