--- a/contact.html
+++ b/contact.html
@@ -129,6 +129,17 @@
 
             .main-info, .form-info{
                 animation: popUp 1s ease-out;
+                border: 3px solid black;
+                width: 300px;
+                height: 350px;
+            }
+
+            .main-info{
+                margin-left: 100px;
+            }
+
+            .form-info{
+                margin-right: 250px;
             }
 
             .contact-details p {
@@ -187,7 +198,6 @@
                     transform: scale(1); 
                     }
             }
-
         </style>
 
         <script>
@@ -215,7 +225,7 @@
     <body>
         <!-- Navigation bar for navigating between pages -->
         <header>
-            <div class="logo">TechSolutions Inc.</div>
+            <div class="logo"><span style="color: rgb(196, 14, 141);">Tech</span>Solutions Inc.</div>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
